--- a/index_CDB_table1.html
+++ b/index_CDB_table1.html
@@ -83,7 +83,7 @@ font-style: italic;
 <!–– add your tableizer data below this line––>
 
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of CDB Directory NGOs Tagged</th><th>Number of MPS Dataset NGOs Tagged</th><th>Total</th></tr></thead><tbody>
+  <thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of</br>CDB Directory</br>NGOs Tagged</th><th>Number of</br>MPS Dataset</br>NGOs Tagged</th><th>Total</th></tr></thead><tbody>
  <tr><td>Aging</td><td>22</td><td>13</td><td>35</td></tr>
  <tr><td>Agriculture</td><td>38</td><td>7</td><td>45</td></tr>
  <tr><td>Animal Protection</td><td>8</td><td>8</td><td>16</td></tr>
