--- a/index_CDB_table1.html
+++ b/index_CDB_table1.html
@@ -83,39 +83,39 @@ font-style: italic;
 <!–– add your tableizer data below this line––>
 
 <table class="tableizer-table">
-  <thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of</br>CDB Directory</br>NGOs</th><th>Number of</br>MPS Dataset</br>NGOs</th><th>Total</th></tr></thead><tbody>
- <tr><td>Aging</td><td>22</td><td>13</td><td>35</td></tr>
- <tr><td>Agriculture</td><td>38</td><td>7</td><td>45</td></tr>
- <tr><td>Animal Protection</td><td>8</td><td>8</td><td>16</td></tr>
- <tr><td>Arts and Culture</td><td>13</td><td>32</td><td>45</td></tr>
- <tr><td>Civil Society Capacity-Building</td><td>169</td><td>40</td><td>209</td></tr>
- <tr><td>Disabilities</td><td>31</td><td>31</td><td>62</td></tr>
- <tr><td>Disaster Relief</td><td>18</td><td>30</td><td>48</td></tr>
- <tr><td>Economic Development</td><td>5</td><td>30</td><td>35</td></tr>
- <tr><td>Education</td><td>121</td><td>157</td><td>278</td></tr>
- <tr><td>Energy</td><td>0</td><td>6</td><td>6</td></tr>
- <tr><td>Environment</td><td>114</td><td>54</td><td>168</td></tr>
- <tr><td>Ethnic Affairs</td><td>7</td><td>7</td><td>14</td></tr>
- <tr><td>Gender Issues</td><td>21</td><td>15</td><td>36</td></tr>
- <tr><td>Health</td><td>59</td><td>73</td><td>132</td></tr>
- <tr><td>Infrastructure</td><td>0</td><td>23</td><td>23</td></tr>
- <tr><td>International Relations/Exchange</td><td>2</td><td>64</td><td>66</td></tr>
- <tr><td>Labor</td><td>15</td><td>13</td><td>28</td></tr>
- <tr><td>Law and Governance</td><td>15</td><td>21</td><td>36</td></tr>
- <tr><td>LGBTQ Issues</td><td>9</td><td>0</td><td>9</td></tr>
- <tr><td>Media</td><td>6</td><td>2</td><td>8</td></tr>
- <tr><td>Migrants</td><td>11</td><td>4</td><td>15</td></tr>
- <tr><td>Poverty Alleviation</td><td>42</td><td>47</td><td>89</td></tr>
- <tr><td>Religion</td><td>6</td><td>3</td><td>9</td></tr>
- <tr><td>Rural Issues/Development</td><td>56</td><td>17</td><td>73</td></tr>
- <tr><td>Sport</td><td>0</td><td>9</td><td>9</td></tr>
- <tr><td>Technology</td><td>0</td><td>22</td><td>22</td></tr>
- <tr><td>Tourism</td><td>0</td><td>6</td><td>6</td></tr>
- <tr><td>Trade</td><td>1</td><td>40</td><td>41</td></tr>
- <tr><td>Urban Issues/Development</td><td>0</td><td>13</td><td>13</td></tr>
- <tr><td>Youth</td><td>27</td><td>83</td><td>110</td></tr>
- <tr><td>Unknown</td><td>0</td><td>2</td><td>2</td></tr>
- <tr><td>Total</td><td>816</td><td>872</td><td>1688</td></tr>
+  <thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of CDB</br>Directory NGOs</th><th>Number of MPS</br>Dataset NGOs</th></tr></thead><tbody>
+ <tr><td>Aging</td><td>22</td><td>13</td></tr>
+ <tr><td>Agriculture</td><td>38</td><td>7</td></tr>
+ <tr><td>Animal Protection</td><td>8</td><td>8</td></tr>
+ <tr><td>Arts and Culture</td><td>13</td><td>32</td></tr>
+ <tr><td>Civil Society Capacity-Building</td><td>169</td><td>40</td></tr>
+ <tr><td>Disabilities</td><td>31</td><td>31</td></tr>
+ <tr><td>Disaster Relief</td><td>18</td><td>30</td></tr>
+ <tr><td>Economic Development</td><td>5</td><td>30</td></tr>
+ <tr><td>Education</td><td>121</td><td>157</td></tr>
+ <tr><td>Energy</td><td>0</td><td>6</td></tr>
+ <tr><td>Environment</td><td>114</td><td>54</td></tr>
+ <tr><td>Ethnic Affairs</td><td>7</td><td>7</td></tr>
+ <tr><td>Gender Issues</td><td>21</td><td>15</td></tr>
+ <tr><td>Health</td><td>59</td><td>73</td></tr>
+ <tr><td>Infrastructure</td><td>0</td><td>23</td></tr>
+ <tr><td>International Relations/Exchange</td><td>2</td><td>64</td></tr>
+ <tr><td>Labor</td><td>15</td><td>13</td></tr>
+ <tr><td>Law and Governance</td><td>15</td><td>21</td></tr>
+ <tr><td>LGBTQ Issues</td><td>9</td><td>0</td></tr>
+ <tr><td>Media</td><td>6</td><td>2</td></tr>
+ <tr><td>Migrants</td><td>11</td><td>4</td></tr>
+ <tr><td>Poverty Alleviation</td><td>42</td><td>47</td></tr>
+ <tr><td>Religion</td><td>6</td><td>3</td></tr>
+ <tr><td>Rural Issues/Development</td><td>56</td><td>17</td></tr>
+ <tr><td>Sport</td><td>0</td><td>9</td></tr>
+ <tr><td>Technology</td><td>0</td><td>22</td></tr>
+ <tr><td>Tourism</td><td>0</td><td>6</td></tr>
+ <tr><td>Trade</td><td>1</td><td>40</td></tr>
+ <tr><td>Urban Issues/Development</td><td>0</td><td>13</td></tr>
+ <tr><td>Youth</td><td>27</td><td>83</td></tr>
+ <tr><td>Unknown</td><td>0</td><td>2</td></tr>
+ <tr><td>Total</td><td>816</td><td>872</td></tr>
 </tbody></table>
     
 <!–– add your tableizer data above this line––>
