--- a/index_CDB_table2.html
+++ b/index_CDB_table2.html
@@ -83,17 +83,18 @@ font-style: italic;
 <!–– add your tableizer data below this line––>
 
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of</br>CDB Directory</br>NGOs</th><th>Number of</br>MPS Dataset</br>NGOs</th><th>Total</th></tr></thead><tbody>
- <tr><td>Aging</td><td>22</td><td>13</td><td>35</td></tr>
- <tr><td>Animal Protection</td><td>8</td><td>8</td><td>16</td></tr>
- <tr><td>Disabilities</td><td>31</td><td>31</td><td>62</td></tr>
- <tr><td>Disaster Relief</td><td>18</td><td>30</td><td>48</td></tr>
- <tr><td>Education</td><td>121</td><td>157</td><td>278</td></tr>
- <tr><td>Environment</td><td>114</td><td>54</td><td>168</td></tr>
- <tr><td>Health</td><td>59</td><td>73</td><td>132</td></tr>
- <tr><td>Law and Governance</td><td>15</td><td>21</td><td>36</td></tr>
- <tr><td>Media</td><td>6</td><td>2</td><td>8</td></tr>
- <tr><td>Youth</td><td>27</td><td>83</td><td>110</td></tr>
+  <thead><tr class="tableizer-firstrow"><th>Field of Work</th><th>Number of CDB</br>Directory NGOs</th><th>Number of MPS</br>Dataset NGOs</th></tr></thead><tbody>
+ <tr><td>Aging</td><td>22</td><td>13</td></tr>
+ <tr><td>Animal Protection</td><td>8</td><td>8</td></tr>
+ <tr><td>Disabilities</td><td>31</td><td>31</td></tr>
+ <tr><td>Disaster Relief</td><td>18</td><td>30</td></tr>
+ <tr><td>Education</td><td>121</td><td>157</td></tr>
+ <tr><td>Environment</td><td>114</td><td>54</td></tr>
+ <tr><td>Health</td><td>59</td><td>73</td></tr>
+ <tr><td>Law and Governance</td><td>15</td><td>21</td></tr>
+ <tr><td>Media</td><td>6</td><td>2</td></tr>
+ <tr><td>Youth</td><td>27</td><td>83</td></tr>
+ <tr><td>Total</td><td>421</td><td>472</td></tr>
 </tbody></table>
     
 <!–– add your tableizer data above this line––>
