--- a/index_CDB_table3.html
+++ b/index_CDB_table3.html
@@ -83,44 +83,45 @@ font-style: italic;
 <!–– add your tableizer data below this line––>
 
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>Geographic Area</th><th>Number of</br>CDB Directory</br>NGOs</th><th>Number of</br>MPS Dataset</br>NGOs</th><th>Total</th></tr></thead><tbody>
- <tr><td>All of China</td><td>113</td><td>72</td><td>185</td></tr>
- <tr><td>Anhui</td><td>5</td><td>27</td><td>32</td></tr>
- <tr><td>Beijing</td><td>17</td><td>94</td><td>111</td></tr>
- <tr><td>Chongqing</td><td>3</td><td>42</td><td>45</td></tr>
- <tr><td>Fujian</td><td>1</td><td>36</td><td>37</td></tr>
- <tr><td>Gansu</td><td>9</td><td>37</td><td>46</td></tr>
- <tr><td>Guangdong</td><td>16</td><td>74</td><td>90</td></tr>
- <tr><td>Guangxi</td><td>16</td><td>26</td><td>42</td></tr>
- <tr><td>Guizhou</td><td>9</td><td>32</td><td>41</td></tr>
- <tr><td>Hainan</td><td>4</td><td>15</td><td>19</td></tr>
- <tr><td>Hebei</td><td>7</td><td>31</td><td>38</td></tr>
- <tr><td>Heilongjiang</td><td>2</td><td>30</td><td>32</td></tr>
- <tr><td>Henan</td><td>5</td><td>25</td><td>30</td></tr>
- <tr><td>Hubei</td><td>4</td><td>33</td><td>37</td></tr>
- <tr><td>Hunan</td><td>6</td><td>29</td><td>35</td></tr>
- <tr><td>Inner Mongolia</td><td>5</td><td>27</td><td>32</td></tr>
- <tr><td>Jiangsu</td><td>5</td><td>36</td><td>41</td></tr>
- <tr><td>Jiangxi</td><td>1</td><td>22</td><td>23</td></tr>
- <tr><td>Jilin</td><td>1</td><td>25</td><td>26</td></tr>
- <tr><td>Liaoning</td><td>1</td><td>28</td><td>29</td></tr>
- <tr><td>Ningxia</td><td>3</td><td>19</td><td>22</td></tr>
- <tr><td>Qinghai</td><td>8</td><td>30</td><td>38</td></tr>
- <tr><td>Shaanxi</td><td>6</td><td>34</td><td>40</td></tr>
- <tr><td>Shandong</td><td>1</td><td>40</td><td>41</td></tr>
- <tr><td>Shanghai</td><td>9</td><td>37</td><td>46</td></tr>
- <tr><td>Shanxi</td><td>3</td><td>19</td><td>22</td></tr>
- <tr><td>Sichuan</td><td>26</td><td>64</td><td>90</td></tr>
- <tr><td>Tianjin</td><td>2</td><td>35</td><td>37</td></tr>
- <tr><td>Tibet</td><td>11</td><td>11</td><td>22</td></tr>
- <tr><td>Xinjiang</td><td>6</td><td>18</td><td>24</td></tr>
- <tr><td>Xinjiang Bingtuan</td><td>0</td><td>10</td><td>10</td></tr>
- <tr><td>Yunnan</td><td>25</td><td>57</td><td>82</td></tr>
- <tr><td>Zhejiang</td><td>1</td><td>48</td><td>49</td></tr>
- <tr><td>Unknown</td><td>179</td><td>3</td><td>182</td></tr>
- <tr><td>Total</td><td>510</td><td>1166</td><td>1676</td></tr>
+  <thead><tr class="tableizer-firstrow"><th>Geographic Area</th><th>Number of CDB</br>Directory NGOs</th><th>Number of MPS</br>Dataset NGOs</th></tr></thead><tbody>
+ <tr><td>All of China</td><td>113</td><td>72</td></tr>
+ <tr><td>Anhui</td><td>5</td><td>27</td></tr>
+ <tr><td>Beijing</td><td>17</td><td>94</td></tr>
+ <tr><td>Chongqing</td><td>3</td><td>42</td></tr>
+ <tr><td>Fujian</td><td>1</td><td>36</td></tr>
+ <tr><td>Gansu</td><td>9</td><td>37</td></tr>
+ <tr><td>Guangdong</td><td>16</td><td>74</td></tr>
+ <tr><td>Guangxi</td><td>16</td><td>26</td></tr>
+ <tr><td>Guizhou</td><td>9</td><td>32</td></tr>
+ <tr><td>Hainan</td><td>4</td><td>15</td></tr>
+ <tr><td>Hebei</td><td>7</td><td>31</td></tr>
+ <tr><td>Heilongjiang</td><td>2</td><td>30</td></tr>
+ <tr><td>Henan</td><td>5</td><td>25</td></tr>
+ <tr><td>Hubei</td><td>4</td><td>33</td></tr>
+ <tr><td>Hunan</td><td>6</td><td>29</td></tr>
+ <tr><td>Inner Mongolia</td><td>5</td><td>27</td></tr>
+ <tr><td>Jiangsu</td><td>5</td><td>36</td></tr>
+ <tr><td>Jiangxi</td><td>1</td><td>22</td></tr>
+ <tr><td>Jilin</td><td>1</td><td>25</td></tr>
+ <tr><td>Liaoning</td><td>1</td><td>28</td></tr>
+ <tr><td>Ningxia</td><td>3</td><td>19</td></tr>
+ <tr><td>Qinghai</td><td>8</td><td>30</td></tr>
+ <tr><td>Shaanxi</td><td>6</td><td>34</td></tr>
+ <tr><td>Shandong</td><td>1</td><td>40</td></tr>
+ <tr><td>Shanghai</td><td>9</td><td>37</td></tr>
+ <tr><td>Shanxi</td><td>3</td><td>19</td></tr>
+ <tr><td>Sichuan</td><td>26</td><td>64</td></tr>
+ <tr><td>Tianjin</td><td>2</td><td>35</td></tr>
+ <tr><td>Tibet</td><td>11</td><td>11</td></tr>
+ <tr><td>Xinjiang</td><td>6</td><td>18</td></tr>
+ <tr><td>Xinjiang Bingtuan</td><td>0</td><td>10</td></tr>
+ <tr><td>Yunnan</td><td>25</td><td>57</td></tr>
+ <tr><td>Zhejiang</td><td>1</td><td>48</td></tr>
+ <tr><td>Unknown</td><td>179</td><td>3</td></tr>
+ <tr><td>Total</td><td>510</td><td>1166</td></tr>
 </tbody></table>
-    
+  
+  
 <!–– add your tableizer data above this line––>
 </body>
 </html>
