--- a/index_CDB_table3.html
+++ b/index_CDB_table3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>Table 1. Foreign NGOs’ Fields of Work, as Represented in CDB and MPS Data</title>
+      <title>Table 3. Foreign NGOs’ Geographic Scope of Work, as Represented in CDB and MPS Data</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
 <style>
