--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -628,6 +628,17 @@
       <td>Unknown</td>
     </tr>
     <tr>
+      <td>China-Britain Business Council (Shanghai)</td>
+      <td>英国英中贸易协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-01-31</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>China-Britain Business Council (Sichuan)</td>
       <td>英国英中贸易协会</td>
       <td>Sichuan Department of Commerce</td>
@@ -835,6 +846,17 @@
       <td>Shanghai</td>
       <td>2017-04-10</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Couleurs de Chine</td>
+      <td>中国色彩协会</td>
+      <td>Guangxi Department of Education</td>
+      <td>广西壮族自治区教育厅</td>
+      <td>France</td>
+      <td>Arts and Culture, Education, Ethnic Affairs, Youth</td>
+      <td>Guangxi</td>
+      <td>2018-01-25</td>
+      <td>Guangxi</td>
     </tr>
     <tr>
       <td>Croatian Chamber of Economy</td>
@@ -2410,6 +2432,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Niigata Industrial Creation Organization</td>
+      <td>日本公益财团法人新潟产业创造机构</td>
+      <td>Liaoning Department of Commerce</td>
+      <td>辽宁省商务厅</td>
+      <td>Japan</td>
+      <td>International Relations/Exchange, Tourism, Trade</td>
+      <td>Liaoning</td>
+      <td>2018-02-01</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Nima Association</td>
       <td>尼玛协会</td>
       <td>Tibet Health and Family Planning Commission</td>
@@ -2762,6 +2795,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Russia Foodstuff Producers and Suppliers Association</td>
+      <td>俄罗斯食品生产者与供应者协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Russia</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-01-26</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Sichuan, Tianjin, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Russian Federation Chamber of Commerce and Industry</td>
       <td>俄罗斯联邦工商会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -2991,6 +3035,17 @@
       <td>Yunnan</td>
       <td>2017-07-27</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Synergy Global Management Inc.</td>
+      <td>美国仁美国际股份有限公司</td>
+      <td>Liaoning Department of Civil Affairs</td>
+      <td>辽宁省民政厅</td>
+      <td>United States</td>
+      <td>Health, Poverty Alleviation</td>
+      <td>Liaoning</td>
+      <td>2018-02-01</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>Tainan Cultural Association</td>
@@ -3279,6 +3334,17 @@
       <td>Anhui, Chongqing, Guizhou, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>VDMA</td>
+      <td>德国机械设备制造业联合会</td>
+      <td>Beijing Commission of Economy and Informatization</td>
+      <td>北京市经济和信息化委员会</td>
+      <td>Germany</td>
+      <td>Technology, Trade</td>
+      <td>Beijing</td>
+      <td>2018-01-22</td>
+      <td>Beijing, Chongqing, Hebei, Heilongjiang, Jilin, Liaoning, Shandong, Shanxi, Sichuan, Tianjin</td>
+    </tr>
+    <tr>
       <td>Victorian Chamber of Commerce</td>
       <td>澳大利亚维多利亚州工商会</td>
       <td>Shanghai Commission of Commerce</td>
@@ -3453,6 +3519,17 @@
       <td>Jiangxi</td>
       <td>2017-04-19</td>
       <td>Jiangxi</td>
+    </tr>
+    <tr>
+      <td>World Vision (Shaanxi)</td>
+      <td>世界宣明会-中国基金有限公司</td>
+      <td>Shaanxi Department of Civil Affairs</td>
+      <td>陕西省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Disabilities, Disaster Relief, Poverty Alleviation, Youth</td>
+      <td>Shaanxi</td>
+      <td>2018-01-29</td>
+      <td>Shaanxi</td>
     </tr>
     <tr>
       <td>World Vision (Tianjin)</td>
