--- a/PSUheatmap.html
+++ b/PSUheatmap.html
@@ -416,7 +416,7 @@ function(error, data) {
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>*At the provincial level, the corresponding entities are called &ldquo;Economy and Informatization Commissions.&rdquo;</li><li>**Not included on the Ministry of Public Security’s 2017 list of eligible PSUs; has presumably since been added to the next iteration of the list.</li><li>†Does not have corresponding local offices (if a national-level entity) or does not have a corresponding national office (if a local entity).</li><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>*At the provincial level, the corresponding entities are called &ldquo;Economy and Informatization Commissions.&rdquo;</li><li>**Not included on the Ministry of Public Security’s (MPS’s) 2017 list of eligible Professional Supervisory Units (PSUs); as the MPS is known to be updating this list, it is likely that these PSUs will be added to the next iteration.</li><li>†Does not have corresponding local offices (if a national-level entity) or does not have a corresponding national office (if a local entity).</li><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
 
 
 
