--- a/PSUheatmap.html
+++ b/PSUheatmap.html
@@ -157,7 +157,6 @@
       {
       width:95%;
       margin:0 auto;
-      overflow:hidden;
       }
       #header
       {
@@ -179,7 +178,7 @@
 
 <div id="wrapper">
 <div id="header"><h1>Professional Supervisory Units, by Number of Foreign NGOs Sponsored</h1></div>
-<div id="chart" style='overflow-y:auto; overflow-x:scroll; width:1100px; height:700px;'></div>
+<div id="chart" style='overflow:scroll; width:1100px; height:700px;'></div>
 
 <script type="text/javascript">
 var margin = { top: 190, right: 10, bottom: 50, left: 435 },
