--- a/PSUheatmap.html
+++ b/PSUheatmap.html
@@ -178,7 +178,7 @@
 
 <div id="wrapper">
 <div id="header"><h1>Professional Supervisory Units, by Number of Foreign NGOs Sponsored</h1></div>
-<div id="chart" style='overflow:scroll; width:1100px; height:700px;'></div>
+<div id="chart" style='overflow:hidden; width:1100px; height:1200px;'></div>
 
 <script type="text/javascript">
 var margin = { top: 190, right: 10, bottom: 50, left: 435 },
