--- a/index_psu.html
+++ b/index_psu.html
@@ -80,7 +80,7 @@ font-style: italic;
 
 <table id="filter" class="sortable">
 
-<!–– add your tableizer data below this line, removing "<table class="tableizer-table">"and"<tr class="tableizer-firstrow">" ––>
+<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
   
   
 
