--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3806,6 +3806,17 @@
       <td>2018-02-28</td>
       <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Jiangsu, Shandong, Shanghai, Sichuan, Yunnan, Zhejiang</td>
     </tr>
+    <tr>
+      <td>HKFTU Hong Ling Society for the Well-Being of the Elderly</td>
+      <td>工联康龄长者服务社</td>
+      <td>Fujian General Labor Union</td>
+      <td>福建省总工会</td>
+      <td>Hong Kong</td>
+      <td>Aging, Health, International Relations/Exchange, Labor, Law and Governance</td>
+      <td>Fujian</td>
+      <td>2018-03-08</td>
+      <td>Fujian</td>
+    </tr>
   </tbody>
 </table>
 
