--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -276,7 +276,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Li Ka Shing Foundation</td>
+      <td>Li Ka Shing Foundation*</td>
       <td>李嘉诚基金会</td>
       <td>Ministry of Civil Affairs</td>
       <td>民政部</td>
@@ -3422,7 +3422,7 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jilin, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>Iwate Industrial Revitalization Center</td>
+      <td>Iwate Industrial Revitalization Center (Liaoning)</td>
       <td>日本公益财团法人岩手产业振兴中心</td>
       <td>Liaoning Department of Commerce</td>
       <td>辽宁省商务厅</td>
@@ -3816,6 +3816,105 @@
       <td>Fujian</td>
       <td>2018-03-08</td>
       <td>Fujian</td>
+    </tr>
+    <tr>
+      <td>Iwate Industrial Revitalization Center (Yunnan)</td>
+      <td>日本公益财团法人岩手产业振兴中心</td>
+      <td>Yunnan People’s Association for Friendship with Foreign Countries</td>
+      <td>云南省人民对外友好协会</td>
+      <td>Japan</td>
+      <td>Agriculture, Arts and Culture, Economic Development, Education, Environment, International Relations/Exchange, Tourism, Trade</td>
+      <td>Yunnan</td>
+      <td>2018-03-09</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>American International Chamber of Commerce (Sichuan)</td>
+      <td>美国国际商会</td>
+      <td>Sichuan Department of Commerce</td>
+      <td>四川省商务厅</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Sichuan</td>
+      <td>2018-03-12</td>
+      <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Shizuoka Prefecture International Economic Revitalization Association</td>
+      <td>日本公益财团法人静冈县国际经济振兴会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Japan</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-03-12</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Japan-China Economic Association (Shanghai)</td>
+      <td>日本日中经济协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Japan</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-03-12</td>
+      <td>Anhui, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>ICLEI - Local Governments for Sustainability East Asia Secretariat</td>
+      <td>宜可城-地方可持续发展协会东亚秘书处</td>
+      <td>Beijing Bureau of Environmental Protection</td>
+      <td>北京市环境保护局</td>
+      <td>South Korea</td>
+      <td>Economic Development, Energy, Environment, International Relations/Exchange, Technology, Urban Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-03-13</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Clean Air Asia</td>
+      <td>亚洲清洁空气中心</td>
+      <td>Ministry of Environmental Protection</td>
+      <td>环境保护部</td>
+      <td>The Philippines</td>
+      <td>Environment, Law and Governance</td>
+      <td>Beijing</td>
+      <td>2018-03-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Crop Science Asia Society</td>
+      <td>作物科学亚洲协会</td>
+      <td>Ministry of Agriculture</td>
+      <td>农业部</td>
+      <td>Singapore</td>
+      <td>Agriculture, International Relations/Exchange, Technology</td>
+      <td>Beijing</td>
+      <td>2018-03-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>China-Britain Business Council (Beijing)</td>
+      <td>英中贸易协会</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-03-15</td>
+      <td>Beijing</td>
+    </tr>
+    <tr>
+      <td>Heifer Hong Kong</td>
+      <td>香港小母牛</td>
+      <td>The State Council Leading Group Office of Poverty Alleviation and Development General Affairs Department</td>
+      <td>国务院扶贫开发领导小组办公室综合司</td>
+      <td>Hong Kong</td>
+      <td>Agriculture, Economic Development, Environment, Poverty Alleviation, Rural Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-03-15</td>
+      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Hubei, Inner Mongolia, Qinghai, Sichuan, Yunnan</td>
     </tr>
   </tbody>
 </table>
