--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1090,6 +1090,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Xinjiang Bingtuan, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Ethics Research Institute</td>
+      <td>一般社团法人伦理研究所</td>
+      <td>Inner Mongolia Forestry Administration</td>
+      <td>内蒙古林业厅</td>
+      <td>Japan</td>
+      <td>Environment, International Relations/Exchange, Youth</td>
+      <td>Inner Mongolia</td>
+      <td>2018-04-18</td>
+      <td>Inner Mongolia</td>
+    </tr>
+    <tr>
       <td>Europe-China Culture and Economy Commission</td>
       <td>欧盟中国经济文化委员会</td>
       <td>Henan Department of Commerce</td>
@@ -1299,7 +1310,18 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>German Academic Exchange Service (DAAD)</td>
+      <td>George Institute for Global Health</td>
+      <td>乔治全球健康研究院</td>
+      <td>Beijing Health and Family Planning Commission</td>
+      <td>北京市卫生和计划生育委员会</td>
+      <td>Australia</td>
+      <td>Education, Gender Issues, Health, Youth</td>
+      <td>Beijing</td>
+      <td>2018-02-05</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>German Academic Exchange Service (DAAD) (Beijing)</td>
       <td>德国学术交流中心</td>
       <td>Ministry of Education</td>
       <td>中华人民共和国教育部</td>
@@ -1308,6 +1330,17 @@
       <td>Beijing</td>
       <td>2017-11-30</td>
       <td>Beijing, Chongqing, Gansu, Hebei, Heilongjiang, Henan, Hubei, Inner Mongolia, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan</td>
+    </tr>
+    <tr>
+      <td>German Academic Exchange Service (DAAD) (Guangdong)</td>
+      <td>德国学术交流中心</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Germany</td>
+      <td>Education, International Relations/Exchange, Youth</td>
+      <td>Guangdong</td>
+      <td>2018-04-24</td>
+      <td>Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hunan</td>
     </tr>
     <tr>
       <td>Gifu Industry and Economy Revitalization Center</td>
@@ -1695,6 +1728,17 @@
       <td>Fujian, Gansu, Guangxi, Guizhou, Qinghai, Shaanxi, Sichuan</td>
     </tr>
     <tr>
+      <td>Humana People to People China (Chongqing)</td>
+      <td>互满爱人与人国际运动联合会</td>
+      <td>Chongqing Office of Poverty Alleviation and Development</td>
+      <td>重庆市扶贫开发办公室</td>
+      <td>Switzerland</td>
+      <td>Civil Society Capacity-Building, Disaster Relief, Education, Environment, Gender Issues, Health, Rural Issues/Development, Technology, Youth</td>
+      <td>Chongqing</td>
+      <td>2018-04-23</td>
+      <td>Chongqing</td>
+    </tr>
+    <tr>
       <td>Humana People to People China (Sichuan)</td>
       <td>互满爱人与人国际运动联合会</td>
       <td>Sichuan Department of Education</td>
@@ -1869,6 +1913,17 @@
       <td>Beijing</td>
       <td>2017-08-15</td>
       <td>Anhui, Beijing, Gansu, Guizhou, Hainan, Hebei, Heilongjiang, Hubei, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang, Unknown</td>
+    </tr>
+    <tr>
+      <td>International Development &amp; Educational Associates (IDEAS)</td>
+      <td>国际教育扶贫机构</td>
+      <td>Sichuan Department of Education</td>
+      <td>四川省教育厅</td>
+      <td>United States</td>
+      <td>Agriculture, Education, Health, Infrastructure, Poverty Alleviation, Rural Issues/Development, Youth</td>
+      <td>Sichuan</td>
+      <td>2018-04-23</td>
+      <td>Sichuan</td>
     </tr>
     <tr>
       <td>International Fund for Animal Welfare</td>
@@ -3510,6 +3565,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Taizhong City Li Zhaoxiong Private Charitable Foundation</td>
+      <td>财团法人台中市私立李照雄慈善基金会（中国台湾）重庆代表处</td>
+      <td>Chongqing People’s Government Office of Taiwan Affairs</td>
+      <td>重庆市人民政府台湾事务办公室</td>
+      <td>Taiwan</td>
+      <td>Disaster Relief, Poverty Alleviation</td>
+      <td>Chongqing</td>
+      <td>2018-04-24</td>
+      <td>Chongqing, Guizhou, Sichuan, Yunnan</td>
+    </tr>
+    <tr>
       <td>Thailand-China Eastern Alliance Trade Promotion Council</td>
       <td>泰中东盟经贸促进会</td>
       <td>Hunan Department of Commerce</td>
@@ -3519,17 +3585,6 @@
       <td>Hunan</td>
       <td>2017-11-27</td>
       <td>Hunan</td>
-    </tr>
-    <tr>
-      <td>The George Institute for Global Health</td>
-      <td>乔治全球健康研究院</td>
-      <td>Beijing Health and Family Planning Commission</td>
-      <td>北京市卫生和计划生育委员会</td>
-      <td>Australia</td>
-      <td>Education, Gender Issues, Health, Youth</td>
-      <td>Beijing</td>
-      <td>2018-02-05</td>
-      <td>China</td>
     </tr>
     <tr>
       <td>Tin Ka Ping Foundation</td>
@@ -3574,6 +3629,17 @@
       <td>Liaoning</td>
       <td>2017-12-28</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jilin, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Traditional Chinese Culture Flame Fund Limited</td>
+      <td>薪火文化公益基金有限公司</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, International Relations/Exchange, Poverty Alleviation</td>
+      <td>Guangdong</td>
+      <td>2018-04-24</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>U.S. Grains Council</td>
