--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1508,6 +1508,17 @@
       <td>Anhui, Fujian, Gansu, Jiangsu, Jiangxi, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Xinjiang, Zhejiang</td>
     </tr>
     <tr>
+      <td>Habitat for Humanity Hong Kong (Shanghai)</td>
+      <td>香港仁人家园有限公司</td>
+      <td>Shanghai Bureau of Civil Affairs</td>
+      <td>上海市民政局</td>
+      <td>Hong Kong</td>
+      <td>Aging, Civil Society Capacity-Building, Disaster Relief, Infrastructure, International Relations/Exchange, Poverty Alleviation</td>
+      <td>Shanghai</td>
+      <td>2018-04-27</td>
+      <td>Anhui, Guangdong, Guangxi, Jiangsu, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Habitat for Humanity Hong Kong (Sichuan)</td>
       <td>香港仁人家园有限公司</td>
       <td>Sichuan Department of Poverty Alleviation and Immigration</td>
@@ -3386,6 +3397,17 @@
       <td>Trade</td>
       <td>Beijing</td>
       <td>2017-05-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>South Korea Busan Conference Center</td>
+      <td>韩国釜山商工会议所</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>South Korea</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-04-27</td>
       <td>China</td>
     </tr>
     <tr>
