--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -157,7 +157,7 @@
     <tr>
       <td>Air Conditioning, Heating, and Refrigeration Institute</td>
       <td>美国空调供暖和制冷工业协会</td>
-      <td>Anhui Administration of Quality and Technology Supervision</td>
+      <td>Anhui Administration of Quality and Technical Supervision</td>
       <td>安徽省质量技术监督局</td>
       <td>United States</td>
       <td>Trade</td>
@@ -725,6 +725,17 @@
       <td>Fujian</td>
       <td>2017-07-27</td>
       <td>Fujian</td>
+    </tr>
+    <tr>
+      <td>China-U.S. Volunteer Cooperation Service Society</td>
+      <td>中美义务合作服务社</td>
+      <td>Henan Department of Education</td>
+      <td>河南省教育厅</td>
+      <td>United States</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>Henan</td>
+      <td>2018-05-09</td>
+      <td>Henan</td>
     </tr>
     <tr>
       <td>Chinese Art of Tea Craft Union</td>
@@ -1937,7 +1948,18 @@
       <td>Sichuan</td>
     </tr>
     <tr>
-      <td>International Fund for Animal Welfare</td>
+      <td>International Fund for Animal Welfare (IFAW) (Beijing)</td>
+      <td>国际爱护动物基金会</td>
+      <td>State Forestry Administration</td>
+      <td>中华人民共和国国家林业局</td>
+      <td>United States</td>
+      <td>Animal Protection, Environment</td>
+      <td>Beijing</td>
+      <td>2018-05-16</td>
+      <td>Anhui, Beijing, Fujian, Gansu, Guangdong, Guangxi, Hainan, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Fund for Animal Welfare (IFAW) (Yunnan)</td>
       <td>国际爱护动物基金会</td>
       <td>Yunnan Forestry Department</td>
       <td>云南省林业厅</td>
@@ -1946,6 +1968,17 @@
       <td>Yunnan</td>
       <td>2017-04-10</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>International Fur Federation</td>
+      <td>国际毛皮协会</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-05-16</td>
+      <td>Beijing, Guangdong, Hebei, Heilongjiang, Jiangsu, Jilin, Liaoning, Shandong, Zhejiang</td>
     </tr>
     <tr>
       <td>International Hot Pot Industry Alliance</td>
@@ -2784,7 +2817,7 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>Nima Association</td>
+      <td>Nima - Social Projects in Tibet</td>
       <td>尼玛协会</td>
       <td>Tibet Health and Family Planning Commission</td>
       <td>西藏自治区卫计委</td>
@@ -3802,7 +3835,7 @@
       <td>辽宁省残疾人联合会</td>
       <td>United States</td>
       <td>Disabilities</td>
-      <td>Shenyang</td>
+      <td>Liaoning</td>
       <td>2018-04-13</td>
       <td>Liaoning</td>
     </tr>
