--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -232,6 +232,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>American Petroleum Institute</td>
+      <td>美国石油协会</td>
+      <td>National Energy Administration</td>
+      <td>国家能源局</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-05-25</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Animals Asia Foundation</td>
       <td>亚洲动物基金有限公司</td>
       <td>Sichuan Forestry Administration</td>
@@ -307,6 +318,17 @@
       <td>Hunan</td>
       <td>2018-04-11</td>
       <td>Hunan</td>
+    </tr>
+    <tr>
+      <td>Austrian Chinese Business Association</td>
+      <td>澳中商业协会</td>
+      <td>Hebei Department of Commerce</td>
+      <td>河北省商务厅</td>
+      <td>Australia</td>
+      <td>Trade</td>
+      <td>Hebei</td>
+      <td>2018-05-24</td>
+      <td>Hebei</td>
     </tr>
     <tr>
       <td>Better Cotton Initiative</td>
@@ -1321,6 +1343,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Gangwon Industrial and Economic Revitalization Institute</td>
+      <td>江原道产业经济振兴院</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>South Korea</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-05-23</td>
+      <td>Beijing, Hebei</td>
+    </tr>
+    <tr>
       <td>George Institute for Global Health</td>
       <td>乔治全球健康研究院</td>
       <td>Beijing Health and Family Planning Commission</td>
@@ -1396,6 +1429,17 @@
       <td>Shaanxi</td>
       <td>2017-05-27</td>
       <td>Shaanxi, Yunnan</td>
+    </tr>
+    <tr>
+      <td>GlobalGiving</td>
+      <td>全球赠与基金会</td>
+      <td>Shanghai People’s Association for Friendship with Foreign Countries</td>
+      <td>上海市人民对外友好协会</td>
+      <td>United States</td>
+      <td>Civil Society Capacity-Building, Disaster Relief, Education, Health, International Relations/Exchange, Poverty Alleviation</td>
+      <td>Shanghai</td>
+      <td>2018-05-31</td>
+      <td>Beijing, Chongqing, Guangdong, Hubei, Jiangsu, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan</td>
     </tr>
     <tr>
       <td>Go and Love Foundation</td>
@@ -1915,7 +1959,18 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>International Copper Association</td>
+      <td>International Copper Association (Beijing)</td>
+      <td>国际铜专业协会</td>
+      <td>Ministry of Industry and Information Technology</td>
+      <td>中华人民共和国工业和信息化部</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-05-21</td>
+      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Heilongjiang, Henan, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Tianjin, Tibet, Xinjiang</td>
+    </tr>
+    <tr>
+      <td>International Copper Association (Shanghai)</td>
       <td>国际铜专业协会</td>
       <td>Shanghai Commission of Commerce</td>
       <td>上海市商务委员会</td>
@@ -1924,6 +1979,17 @@
       <td>Shanghai</td>
       <td>2017-04-01</td>
       <td>Fujian, Guangdong, Guangxi, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>International Council on Clean Transportation</td>
+      <td>国际清洁交通委员会</td>
+      <td>Ministry of Environmental Protection</td>
+      <td>中华人民共和国环境保护部</td>
+      <td>United States</td>
+      <td>Environment, International Relations/Exchange, Law and Governance</td>
+      <td>Beijing</td>
+      <td>2018-05-21</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>International Crane Foundation</td>
@@ -2234,6 +2300,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Jian Hua Foundation, Ltd.</td>
+      <td>香港建华基金会有限公司</td>
+      <td>Yunnan Department of Civil Affairs</td>
+      <td>云南省民政厅\t</td>
+      <td>Hong Kong</td>
+      <td>Youth</td>
+      <td>Yunnan</td>
+      <td>2018-05-18</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
       <td>Junior Achievement China</td>
       <td>中国国际青年成就</td>
       <td>Chinese People’s Association for Friendship with Foreign Countries</td>
@@ -2473,6 +2550,17 @@
       <td>Trade</td>
       <td>Shanghai</td>
       <td>2017-11-22</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Landesa</td>
+      <td>农村发展研究所</td>
+      <td>Ministry of Agriculture</td>
+      <td>中华人民共和国农业部</td>
+      <td>United States</td>
+      <td>Agriculture, Environment, Gender Issues, Law and Governance, Poverty Alleviation, Rural Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-05-21</td>
       <td>China</td>
     </tr>
     <tr>
@@ -2731,7 +2819,7 @@
     <tr>
       <td>Netherlands Trade Promotion Council (Jiangsu)</td>
       <td>荷兰贸易促进委员会</td>
-      <td>Liaoning Department of Commerce</td>
+      <td>Jiangsu Department of Commerce</td>
       <td>江苏省商务厅</td>
       <td>The Netherlands</td>
       <td>Trade</td>
@@ -2749,6 +2837,17 @@
       <td>Shandong</td>
       <td>2017-11-08</td>
       <td>Shandong</td>
+    </tr>
+    <tr>
+      <td>Netherlands Trade Promotion Council (Liaoning)</td>
+      <td>荷兰贸易促进委员会</td>
+      <td>Liaoning Department of Commerce</td>
+      <td>辽宁省商务厅</td>
+      <td>The Netherlands</td>
+      <td>Trade</td>
+      <td>Liaoning</td>
+      <td>2018-05-22</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>Netherlands Trade Promotion Council (Qingdao, Shandong)</td>
@@ -2850,7 +2949,18 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>North Gyeongsang Economic Revitalization Institute</td>
+      <td>North Gyeongsang Economic Revitalization Institute (Beijing)</td>
+      <td>韩国（财）庆尚北道经济振兴院</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>South Korea</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-05-21</td>
+      <td>Beijing, Heilongjiang</td>
+    </tr>
+    <tr>
+      <td>North Gyeongsang Economic Revitalization Institute (Shanghai)</td>
       <td>韩国（财）庆尚北道经济振兴院</td>
       <td>Shanghai Commission of Commerce</td>
       <td>上海市商务委员会</td>
@@ -3620,6 +3730,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Taiwan-China Strait Two Shores One Family Exchange Promotion Association</td>
+      <td>台湾中华海峡两岸一家亲交流促进会</td>
+      <td>Fujian Department of Culture</td>
+      <td>福建省文化厅</td>
+      <td>Taiwan</td>
+      <td>Arts and Culture, Civil Society Capacity-Building, Economic Development, International Relations/Exchange, Trade</td>
+      <td>Fujian</td>
+      <td>2018-05-21</td>
+      <td>Fujian</td>
+    </tr>
+    <tr>
       <td>Taizhong City Li Zhaoxiong Private Charitable Foundation</td>
       <td>财团法人台中市私立李照雄慈善基金会（中国台湾）重庆代表处</td>
       <td>Chongqing People’s Government Office of Taiwan Affairs</td>
@@ -3937,6 +4058,17 @@
       <td>Beijing</td>
       <td>2017-09-04</td>
       <td>Anhui, Beijing, Fujian, Guangdong, Guangxi, Heilongjiang, Jiangsu, Jilin, Qinghai, Shanghai, Tibet, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>Winrock International</td>
+      <td>温洛克国际农业开发中心</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>United States</td>
+      <td>Economic Development, Environment, Rural Issues/Development, Technology</td>
+      <td>Beijing</td>
+      <td>2018-05-23</td>
+      <td>Beijing, Gansu, Qinghai, Sichuan, Yunnan</td>
     </tr>
     <tr>
       <td>Wirtschaftsförderung und Technologietransfer Schleswig-Holstein GmbH</td>
