--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1673,6 +1673,17 @@
       <td>Fujian</td>
     </tr>
     <tr>
+      <td>Health Benefits for All International</td>
+      <td>健康普惠国际</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>United States</td>
+      <td>Health, International Relations/Exchange</td>
+      <td>Shanghai</td>
+      <td>2018-06-01</td>
+      <td>Beijing, Hebei, Hubei, Jiangsu, Shaanxi, Shanghai, Tianjin, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Health Poverty Action</td>
       <td>健康扶贫行动</td>
       <td>Yunnan Health and Family Planning Commission</td>
@@ -3618,6 +3629,17 @@
       <td>Beijing</td>
       <td>2017-09-01</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Sunnyyoung Caring Association</td>
+      <td>中华飞扬关怀协会</td>
+      <td>Gansu Department of Education</td>
+      <td>甘肃省教育厅</td>
+      <td>Taiwan</td>
+      <td>Education, Youth</td>
+      <td>Gansu</td>
+      <td>2018-06-01</td>
+      <td>Gansu</td>
     </tr>
     <tr>
       <td>Sunrise Foundation Limited</td>
