--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -507,6 +507,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>CBI</td>
+      <td>英国工商业联合会</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>United Kingdom</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2018-07-09</td>
+      <td>Beijing</td>
+    </tr>
+    <tr>
       <td>CEDAR Fund</td>
       <td>国际施达有限公司</td>
       <td>Yunnan Health and Family Planning Commission</td>
@@ -977,6 +988,17 @@
       <td>Agriculture, International Relations/Exchange, Technology</td>
       <td>Beijing</td>
       <td>2018-03-14</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>CropLife China</td>
+      <td>植保中国协会</td>
+      <td>Ministry of Agriculture</td>
+      <td>农业部</td>
+      <td>Hong Kong</td>
+      <td>Agriculture</td>
+      <td>Beijing</td>
+      <td>2018-07-09</td>
       <td>China</td>
     </tr>
     <tr>
@@ -1915,17 +1937,6 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>International Association for Volunteer Effort (IAVE)</td>
-      <td>国际志愿者协会</td>
-      <td>Hainan Department of Civil Affairs</td>
-      <td>海南省民政厅</td>
-      <td>Hong Kong</td>
-      <td>Civil Society Capacity-Building, International Relations/Exchange, Law and Governance</td>
-      <td>Hainan</td>
-      <td>2018-03-31</td>
-      <td>Beijing, Fujian, Guangdong, Hainan, Hebei, Jiangsu, Shandong, Shanghai, Tianjin, Zhejiang</td>
-    </tr>
-    <tr>
       <td>International Association of Amusement Parks and Attractions (IAAPA)</td>
       <td>国际游乐园及景点协会</td>
       <td>Shanghai Tourism Administration</td>
@@ -2682,6 +2693,17 @@
       <td>Civil Society Capacity-Building, Disaster Relief, International Relations/Exchange, Poverty Alleviation</td>
       <td>Beijing</td>
       <td>2018-02-09</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Milstein Medical Asian American Partnership Foundation</td>
+      <td>米尔斯坦亚美医学基金会</td>
+      <td>State Administration of Foreign Experts Affairs</td>
+      <td>中华人民共和国国家外国专家局</td>
+      <td>United States</td>
+      <td>Health, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2018-07-06</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3785,6 +3807,17 @@
       <td>Hunan</td>
     </tr>
     <tr>
+      <td>The International Association Volunteers</td>
+      <td>国际志愿者协会</td>
+      <td>Hainan Department of Civil Affairs</td>
+      <td>海南省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, International Relations/Exchange, Law and Governance</td>
+      <td>Hainan</td>
+      <td>2018-03-31</td>
+      <td>Beijing, Fujian, Guangdong, Hainan, Hebei, Jiangsu, Shandong, Shanghai, Tianjin, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Tin Ka Ping Foundation</td>
       <td>田家炳基金会</td>
       <td>Ministry of Education</td>
@@ -3904,6 +3937,17 @@
       <td>Beijing</td>
       <td>2017-04-10</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>U.S.-China Association for Promotion of Economy and Trade</td>
+      <td>美中经济贸易促进会</td>
+      <td>Guangdong Department of Commerce</td>
+      <td>广东省商务厅</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Guangdong</td>
+      <td>2018-07-05</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>U.S.-China Business Council (Beijing)</td>
@@ -4123,6 +4167,17 @@
       <td>Economic Development, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2017-01-23</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Future Foundation</td>
+      <td>世界未来委员会基金会</td>
+      <td>Ministry of Housing and Urban-Rural Development</td>
+      <td>中华人民共和国住房与城乡建设部</td>
+      <td>Germany</td>
+      <td>Energy, Environment, International Relations/Exchange, Law and Governance, Urban Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-07-09</td>
       <td>China</td>
     </tr>
     <tr>
